y.output
State 0 conflicts: 2 shift/reduce
State 117 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration
    4                 | comment

    5 declaration: var_declaration
    6            | fun_declaration

    7 var_declaration: type_specifier ID ';'
    8                | type_specifier ID '[' NUM ']' ';'

    9 type_specifier: KEYWORD_INT
   10               | KEYWORD_VOID

   11 fun_declaration: type_specifier ID '(' params ')' compound_stmt

   12 comment: comment MULTI_LINE_ANNOTATION
   13        | ε

   14 params: param_list
   15       | KEYWORD_VOID

   16 param_list: param_list ',' param
   17           | param

   18 param: type_specifier ID
   19      | type_specifier ID '[' ']'

   20 compound_stmt: '{' local_declarations statement_list '}'

   21 local_declarations: local_declarations var_declaration
   22                   | ε

   23 statement_list: statement_list statement comment
   24               | ε

   25 statement: expression_stmt
   26          | compound_stmt
   27          | selection_stmt
   28          | iteration_stmt
   29          | return_stmt

   30 expression_stmt: expression ';'
   31                | ';'

   32 selection_stmt: KEYWORD_IF '(' expression ')' statement
   33               | KEYWORD_IF '(' expression ')' statement KEYWORD_ELSE statement

   34 $@1: ε

   35 iteration_stmt: KEYWORD_WHILE '(' expression $@1 ')' statement

   36 return_stmt: KEYWORD_RETURN ';'
   37            | KEYWORD_RETURN expression ';'

   38 expression: var '=' expression
   39           | simple_expression KEYWORD_AND simple_expression
   40           | simple_expression KEYWORD_OR simple_expression
   41           | KEYWORD_NO '(' simple_expression ')'
   42           | simple_expression

   43 var: ID
   44    | ID '[' expression ']'

   45 simple_expression: additive_expression LESS_EQUAL_THAN additive_expression
   46                  | additive_expression LESS_THAN additive_expression
   47                  | additive_expression GREAT_THAN additive_expression
   48                  | additive_expression GREAT_EQUAL_THAN additive_expression
   49                  | additive_expression DOUBLE_EQUAL additive_expression
   50                  | additive_expression NOT_EQUAL additive_expression
   51                  | additive_expression

   52 additive_expression: additive_expression '+' term
   53                    | additive_expression '-' term
   54                    | term

   55 term: term '^' factor
   56     | term '*' factor
   57     | term '/' factor
   58     | term '%' factor
   59     | factor

   60 factor: '(' expression ')'
   61       | var
   62       | call
   63       | NUM

   64 call: ID '(' args ')'

   65 args: arg_list
   66     | ε

   67 arg_list: arg_list ',' expression
   68         | expression


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 58
    '(' (40) 11 32 33 35 41 60 64
    ')' (41) 11 32 33 35 41 60 64
    '*' (42) 56
    '+' (43) 52
    ',' (44) 16 67
    '-' (45) 53
    '/' (47) 57
    ';' (59) 7 8 30 31 36 37
    '=' (61) 38
    '[' (91) 8 19 44
    ']' (93) 8 19 44
    '^' (94) 55
    '{' (123) 20
    '}' (125) 20
    error (256)
    ID <name> (258) 7 8 11 18 19 43 44 64
    NUM <name> (259) 8 63
    LESS_EQUAL_THAN <name> (260) 45
    LESS_THAN <name> (261) 46
    GREAT_THAN <name> (262) 47
    GREAT_EQUAL_THAN <name> (263) 48
    DOUBLE_EQUAL <name> (264) 49
    NOT_EQUAL <name> (265) 50
    KEYWORD_ELSE <name> (266) 33
    KEYWORD_IF <name> (267) 32 33
    KEYWORD_INT <name> (268) 9
    KEYWORD_RETURN <name> (269) 36 37
    KEYWORD_VOID <name> (270) 10 15
    KEYWORD_WHILE <name> (271) 35
    MULTI_LINE_ANNOTATION <name> (272) 12
    KEYWORD_AND <name> (273) 39
    KEYWORD_OR <name> (274) 40
    KEYWORD_NO <name> (275) 41


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program <node> (37)
        on left: 1
        on right: 0
    declaration_list <node> (38)
        on left: 2 3 4
        on right: 1 2
    declaration <node> (39)
        on left: 5 6
        on right: 2 3
    var_declaration <node> (40)
        on left: 7 8
        on right: 5 21
    type_specifier <node> (41)
        on left: 9 10
        on right: 7 8 11 18 19
    fun_declaration <node> (42)
        on left: 11
        on right: 6
    comment <node> (43)
        on left: 12 13
        on right: 4 12 23
    params <node> (44)
        on left: 14 15
        on right: 11
    param_list <node> (45)
        on left: 16 17
        on right: 14 16
    param <node> (46)
        on left: 18 19
        on right: 16 17
    compound_stmt <node> (47)
        on left: 20
        on right: 11 26
    local_declarations <node> (48)
        on left: 21 22
        on right: 20 21
    statement_list <node> (49)
        on left: 23 24
        on right: 20 23
    statement <node> (50)
        on left: 25 26 27 28 29
        on right: 23 32 33 35
    expression_stmt <node> (51)
        on left: 30 31
        on right: 25
    selection_stmt <node> (52)
        on left: 32 33
        on right: 27
    iteration_stmt <node> (53)
        on left: 35
        on right: 28
    $@1 (54)
        on left: 34
        on right: 35
    return_stmt <node> (55)
        on left: 36 37
        on right: 29
    expression <node> (56)
        on left: 38 39 40 41 42
        on right: 30 32 33 35 37 38 44 60 67 68
    var <node> (57)
        on left: 43 44
        on right: 38 61
    simple_expression <node> (58)
        on left: 45 46 47 48 49 50 51
        on right: 39 40 41 42
    additive_expression <node> (59)
        on left: 52 53 54
        on right: 45 46 47 48 49 50 51 52 53
    term <node> (60)
        on left: 55 56 57 58 59
        on right: 52 53 54 55 56 57 58
    factor <node> (61)
        on left: 60 61 62 63
        on right: 55 56 57 58 59
    call <node> (62)
        on left: 64
        on right: 62
    args <node> (63)
        on left: 65 66
        on right: 64
    arg_list <node> (64)
        on left: 67 68
        on right: 65 67


State 0

    0 $accept: • program $end

    KEYWORD_INT   shift, and go to state 1
    KEYWORD_VOID  shift, and go to state 2

    KEYWORD_INT   [reduce using rule 13 (comment)]
    KEYWORD_VOID  [reduce using rule 13 (comment)]
    $default      reduce using rule 13 (comment)

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8
    comment           go to state 9


State 1

    9 type_specifier: KEYWORD_INT •

    $default  reduce using rule 9 (type_specifier)


State 2

   10 type_specifier: KEYWORD_VOID •

    $default  reduce using rule 10 (type_specifier)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 10


State 4

    1 program: declaration_list •
    2 declaration_list: declaration_list • declaration

    KEYWORD_INT   shift, and go to state 1
    KEYWORD_VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 11
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration •

    $default  reduce using rule 3 (declaration_list)


State 6

    5 declaration: var_declaration •

    $default  reduce using rule 5 (declaration)


State 7

    7 var_declaration: type_specifier • ID ';'
    8                | type_specifier • ID '[' NUM ']' ';'
   11 fun_declaration: type_specifier • ID '(' params ')' compound_stmt

    ID  shift, and go to state 12


State 8

    6 declaration: fun_declaration •

    $default  reduce using rule 6 (declaration)


State 9

    4 declaration_list: comment •
   12 comment: comment • MULTI_LINE_ANNOTATION

    MULTI_LINE_ANNOTATION  shift, and go to state 13

    $default  reduce using rule 4 (declaration_list)


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 12

    7 var_declaration: type_specifier ID • ';'
    8                | type_specifier ID • '[' NUM ']' ';'
   11 fun_declaration: type_specifier ID • '(' params ')' compound_stmt

    ';'  shift, and go to state 14
    '['  shift, and go to state 15
    '('  shift, and go to state 16


State 13

   12 comment: comment MULTI_LINE_ANNOTATION •

    $default  reduce using rule 12 (comment)


State 14

    7 var_declaration: type_specifier ID ';' •

    $default  reduce using rule 7 (var_declaration)


State 15

    8 var_declaration: type_specifier ID '[' • NUM ']' ';'

    NUM  shift, and go to state 17


State 16

   11 fun_declaration: type_specifier ID '(' • params ')' compound_stmt

    KEYWORD_INT   shift, and go to state 1
    KEYWORD_VOID  shift, and go to state 18

    type_specifier  go to state 19
    params          go to state 20
    param_list      go to state 21
    param           go to state 22


State 17

    8 var_declaration: type_specifier ID '[' NUM • ']' ';'

    ']'  shift, and go to state 23


State 18

   10 type_specifier: KEYWORD_VOID •
   15 params: KEYWORD_VOID •

    ')'       reduce using rule 15 (params)
    $default  reduce using rule 10 (type_specifier)


State 19

   18 param: type_specifier • ID
   19      | type_specifier • ID '[' ']'

    ID  shift, and go to state 24


State 20

   11 fun_declaration: type_specifier ID '(' params • ')' compound_stmt

    ')'  shift, and go to state 25


State 21

   14 params: param_list •
   16 param_list: param_list • ',' param

    ','  shift, and go to state 26

    $default  reduce using rule 14 (params)


State 22

   17 param_list: param •

    $default  reduce using rule 17 (param_list)


State 23

    8 var_declaration: type_specifier ID '[' NUM ']' • ';'

    ';'  shift, and go to state 27


State 24

   18 param: type_specifier ID •
   19      | type_specifier ID • '[' ']'

    '['  shift, and go to state 28

    $default  reduce using rule 18 (param)


State 25

   11 fun_declaration: type_specifier ID '(' params ')' • compound_stmt

    '{'  shift, and go to state 29

    compound_stmt  go to state 30


State 26

   16 param_list: param_list ',' • param

    KEYWORD_INT   shift, and go to state 1
    KEYWORD_VOID  shift, and go to state 2

    type_specifier  go to state 19
    param           go to state 31


State 27

    8 var_declaration: type_specifier ID '[' NUM ']' ';' •

    $default  reduce using rule 8 (var_declaration)


State 28

   19 param: type_specifier ID '[' • ']'

    ']'  shift, and go to state 32


State 29

   20 compound_stmt: '{' • local_declarations statement_list '}'

    $default  reduce using rule 22 (local_declarations)

    local_declarations  go to state 33


State 30

   11 fun_declaration: type_specifier ID '(' params ')' compound_stmt •

    $default  reduce using rule 11 (fun_declaration)


State 31

   16 param_list: param_list ',' param •

    $default  reduce using rule 16 (param_list)


State 32

   19 param: type_specifier ID '[' ']' •

    $default  reduce using rule 19 (param)


State 33

   20 compound_stmt: '{' local_declarations • statement_list '}'
   21 local_declarations: local_declarations • var_declaration

    KEYWORD_INT   shift, and go to state 1
    KEYWORD_VOID  shift, and go to state 2

    $default  reduce using rule 24 (statement_list)

    var_declaration  go to state 34
    type_specifier   go to state 35
    statement_list   go to state 36


State 34

   21 local_declarations: local_declarations var_declaration •

    $default  reduce using rule 21 (local_declarations)


State 35

    7 var_declaration: type_specifier • ID ';'
    8                | type_specifier • ID '[' NUM ']' ';'

    ID  shift, and go to state 37


State 36

   20 compound_stmt: '{' local_declarations statement_list • '}'
   23 statement_list: statement_list • statement comment

    ID              shift, and go to state 38
    NUM             shift, and go to state 39
    KEYWORD_IF      shift, and go to state 40
    KEYWORD_RETURN  shift, and go to state 41
    KEYWORD_WHILE   shift, and go to state 42
    KEYWORD_NO      shift, and go to state 43
    ';'             shift, and go to state 44
    '('             shift, and go to state 45
    '{'             shift, and go to state 29
    '}'             shift, and go to state 46

    compound_stmt        go to state 47
    statement            go to state 48
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 37

    7 var_declaration: type_specifier ID • ';'
    8                | type_specifier ID • '[' NUM ']' ';'

    ';'  shift, and go to state 14
    '['  shift, and go to state 15


State 38

   43 var: ID •
   44    | ID • '[' expression ']'
   64 call: ID • '(' args ')'

    '['  shift, and go to state 60
    '('  shift, and go to state 61

    $default  reduce using rule 43 (var)


State 39

   63 factor: NUM •

    $default  reduce using rule 63 (factor)


State 40

   32 selection_stmt: KEYWORD_IF • '(' expression ')' statement
   33               | KEYWORD_IF • '(' expression ')' statement KEYWORD_ELSE statement

    '('  shift, and go to state 62


State 41

   36 return_stmt: KEYWORD_RETURN • ';'
   37            | KEYWORD_RETURN • expression ';'

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    ';'         shift, and go to state 63
    '('         shift, and go to state 45

    expression           go to state 64
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 42

   35 iteration_stmt: KEYWORD_WHILE • '(' expression $@1 ')' statement

    '('  shift, and go to state 65


State 43

   41 expression: KEYWORD_NO • '(' simple_expression ')'

    '('  shift, and go to state 66


State 44

   31 expression_stmt: ';' •

    $default  reduce using rule 31 (expression_stmt)


State 45

   60 factor: '(' • expression ')'

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    expression           go to state 67
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 46

   20 compound_stmt: '{' local_declarations statement_list '}' •

    $default  reduce using rule 20 (compound_stmt)


State 47

   26 statement: compound_stmt •

    $default  reduce using rule 26 (statement)


State 48

   23 statement_list: statement_list statement • comment

    $default  reduce using rule 13 (comment)

    comment  go to state 68


State 49

   25 statement: expression_stmt •

    $default  reduce using rule 25 (statement)


State 50

   27 statement: selection_stmt •

    $default  reduce using rule 27 (statement)


State 51

   28 statement: iteration_stmt •

    $default  reduce using rule 28 (statement)


State 52

   29 statement: return_stmt •

    $default  reduce using rule 29 (statement)


State 53

   30 expression_stmt: expression • ';'

    ';'  shift, and go to state 69


State 54

   38 expression: var • '=' expression
   61 factor: var •

    '='  shift, and go to state 70

    $default  reduce using rule 61 (factor)


State 55

   39 expression: simple_expression • KEYWORD_AND simple_expression
   40           | simple_expression • KEYWORD_OR simple_expression
   42           | simple_expression •

    KEYWORD_AND  shift, and go to state 71
    KEYWORD_OR   shift, and go to state 72

    $default  reduce using rule 42 (expression)


State 56

   45 simple_expression: additive_expression • LESS_EQUAL_THAN additive_expression
   46                  | additive_expression • LESS_THAN additive_expression
   47                  | additive_expression • GREAT_THAN additive_expression
   48                  | additive_expression • GREAT_EQUAL_THAN additive_expression
   49                  | additive_expression • DOUBLE_EQUAL additive_expression
   50                  | additive_expression • NOT_EQUAL additive_expression
   51                  | additive_expression •
   52 additive_expression: additive_expression • '+' term
   53                    | additive_expression • '-' term

    LESS_EQUAL_THAN   shift, and go to state 73
    LESS_THAN         shift, and go to state 74
    GREAT_THAN        shift, and go to state 75
    GREAT_EQUAL_THAN  shift, and go to state 76
    DOUBLE_EQUAL      shift, and go to state 77
    NOT_EQUAL         shift, and go to state 78
    '+'               shift, and go to state 79
    '-'               shift, and go to state 80

    $default  reduce using rule 51 (simple_expression)


State 57

   54 additive_expression: term •
   55 term: term • '^' factor
   56     | term • '*' factor
   57     | term • '/' factor
   58     | term • '%' factor

    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '^'  shift, and go to state 83
    '%'  shift, and go to state 84

    $default  reduce using rule 54 (additive_expression)


State 58

   59 term: factor •

    $default  reduce using rule 59 (term)


State 59

   62 factor: call •

    $default  reduce using rule 62 (factor)


State 60

   44 var: ID '[' • expression ']'

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    expression           go to state 85
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 61

   64 call: ID '(' • args ')'

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    $default  reduce using rule 66 (args)

    expression           go to state 86
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59
    args                 go to state 87
    arg_list             go to state 88


State 62

   32 selection_stmt: KEYWORD_IF '(' • expression ')' statement
   33               | KEYWORD_IF '(' • expression ')' statement KEYWORD_ELSE statement

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    expression           go to state 89
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 63

   36 return_stmt: KEYWORD_RETURN ';' •

    $default  reduce using rule 36 (return_stmt)


State 64

   37 return_stmt: KEYWORD_RETURN expression • ';'

    ';'  shift, and go to state 90


State 65

   35 iteration_stmt: KEYWORD_WHILE '(' • expression $@1 ')' statement

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    expression           go to state 91
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 66

   41 expression: KEYWORD_NO '(' • simple_expression ')'

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    simple_expression    go to state 93
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 67

   60 factor: '(' expression • ')'

    ')'  shift, and go to state 94


State 68

   12 comment: comment • MULTI_LINE_ANNOTATION
   23 statement_list: statement_list statement comment •

    MULTI_LINE_ANNOTATION  shift, and go to state 13

    $default  reduce using rule 23 (statement_list)


State 69

   30 expression_stmt: expression ';' •

    $default  reduce using rule 30 (expression_stmt)


State 70

   38 expression: var '=' • expression

    ID          shift, and go to state 38
    NUM         shift, and go to state 39
    KEYWORD_NO  shift, and go to state 43
    '('         shift, and go to state 45

    expression           go to state 95
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 71

   39 expression: simple_expression KEYWORD_AND • simple_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    simple_expression    go to state 96
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 72

   40 expression: simple_expression KEYWORD_OR • simple_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    simple_expression    go to state 97
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 73

   45 simple_expression: additive_expression LESS_EQUAL_THAN • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 98
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 74

   46 simple_expression: additive_expression LESS_THAN • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 99
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 75

   47 simple_expression: additive_expression GREAT_THAN • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 100
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 76

   48 simple_expression: additive_expression GREAT_EQUAL_THAN • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 101
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 77

   49 simple_expression: additive_expression DOUBLE_EQUAL • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 102
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 78

   50 simple_expression: additive_expression NOT_EQUAL • additive_expression

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var                  go to state 92
    additive_expression  go to state 103
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 79

   52 additive_expression: additive_expression '+' • term

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45

    var     go to state 92
    term    go to state 104
    factor  go to state 58
    call    go to state 59


State 80

   53 additive_expression: additive_expression '-' • term

    ID   shift, and go to state 38
    NUM  shift, and go to state 39
    '('  shift, and go to state 45
